# PSP2KeyDumper

./: CMakeLists.txt  README.md
PSP2KeyDumperKernel/: CMakeLists.txt  exports.yml
PSP2KeyDumperKernel/src/: main.c  spkg_auth.c  spkg_auth.h
PSP2KeyDumperUser/: CMakeLists.txt  exports.yml
PSP2KeyDumperUser/src/: key.c  key.h  key_act.c  key_aimgr.c  key_encdec_w_portability.c  key_gcauthmgr.c  key_kprx_auth.c  key_pm.c  key_qaf.c  key_second_loader.c  key_secure_kernel.c  key_update_service.c  log.c  log.h  main.c  psdif.c  psdif.h  psp2keydumper.h  pup.c  pup.h  slb2.c  slb2.h
PSP2KeyDumperUser/src/fat16/: fat16.c  fat16.h  fat16_api.h  fat16_internal.h
PSP2KeyDumperUser/src/ref00d/: ref00d_kprx_auth.c  ref00d_kprx_auth.h  self.h
